--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "idb": "^5.0.6",
     "less": "^3.12.2",
     "next": "9.5.3",
+    "next-offline": "^5.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
