--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "9.5.3",
     "next-offline": "^5.0.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-file-download": "^0.3.5"
   }
 }
