--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-offline": "^5.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-file-download": "^0.3.5"
+    "react-file-download": "^0.3.5",
+    "react-file-reader": "^1.1.4"
   }
 }
