--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "less": "^3.12.2",
     "next": "9.5.3",
     "next-offline": "^5.0.2",
+    "node-sass": "^5.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-awesome-slider": "^4.1.0",
+    "react-dom": "16.13.1",
+    "sass": "^1.30.0"
   }
 }
