--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "react": "16.13.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "16.13.1",
-    "sass": "^1.30.0"
     "react-file-download": "^0.3.5",
-    "react-file-reader": "^1.1.4"
+    "react-file-reader": "^1.1.4",
+    "sass": "^1.30.0"
   }
 }
