--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.6.6",
+    "axios": "^0.21.0",
+    "axios-jsonp": "^1.0.4",
     "babel-plugin-import": "^1.13.0",
     "dayjs": "^1.9.7",
     "idb": "^5.0.6",
