--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.6.6",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "axios-jsonp": "^1.0.4",
     "babel-plugin-import": "^1.13.0",
     "dayjs": "^1.9.7",
     "idb": "^5.0.6",
     "less": "^3.12.2",
+    "mongodb": "^3.6.5",
     "next": "9.5.3",
     "next-offline": "^5.0.2",
     "node-sass": "^5.0.0",
