--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.9.7",
     "idb": "^5.0.6",
     "less": "^3.12.2",
+    "mongoose": "^6.4.2",
     "next": "9.5.3",
     "next-offline": "^5.0.2",
     "next-seo": "^4.23.0",
